--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/JavIregui/SaveTheKing#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-useragent": "^1.0.15",
     "nodemon": "^2.0.21"
   }
 }
